--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,8 +1,8 @@
 name: intern-bot
 on:
   schedule:
-    - cron: "*/15 * * * *"   # every 15 minutes
-  workflow_dispatch:         # lets you run it manually
+    - cron: "*/15 * * * *"
+  workflow_dispatch:
 
 jobs:
   run:
@@ -20,11 +20,11 @@ jobs:
           TWILIO_TOKEN: ${{ secrets.TWILIO_TOKEN }}
           TWILIO_FROM: ${{ secrets.TWILIO_FROM }}
           SMS_TO_LIST: ${{ secrets.SMS_TO_LIST }}
-        run: python watcher.py
+        run: python intern-bot/watcher.py   # ← path fix
       - name: Persist seen.json
         run: |
           git config user.name "intern-bot"
           git config user.email "intern-bot@users.noreply.github.com"
-          git add seen.json || true
+          git add intern-bot/seen.json || true   # ← path fix
           git commit -m "update seen.json" || true
           git push || true
