--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,30 +1,47 @@
 name: intern-bot
+
 on:
   schedule:
     - cron: "*/15 * * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write   # needed to push seen.json
+
 jobs:
   run:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: pip install requests beautifulsoup4 lxml
-      - env:
+
+      - name: Install deps
+        run: pip install requests beautifulsoup4 lxml
+
+      - name: Run watcher
+        env:
+          # SMS / Twilio
           TWILIO_SID: ${{ secrets.TWILIO_SID }}
           TWILIO_TOKEN: ${{ secrets.TWILIO_TOKEN }}
           TWILIO_FROM: ${{ secrets.TWILIO_FROM }}
           SMS_TO_LIST: ${{ secrets.SMS_TO_LIST }}
-        run: python intern-bot/watcher.py   # ← path fix
+
+          # Email / SMTP
+          SMTP_HOST: ${{ secrets.SMTP_HOST }}
+          SMTP_PORT: ${{ secrets.SMTP_PORT }}
+          SMTP_USER: ${{ secrets.SMTP_USER }}
+          SMTP_PASS: ${{ secrets.SMTP_PASS }}
+          EMAIL_TO_LIST: ${{ secrets.EMAIL_TO_LIST }}
+        run: python intern-bot/watcher.py
+
       - name: Persist seen.json
         run: |
           git config user.name "intern-bot"
           git config user.email "intern-bot@users.noreply.github.com"
-          git add intern-bot/seen.json || true   # ← path fix
+          git add intern-bot/seen.json || true
           git commit -m "update seen.json" || true
           git push || true
